Don't count fingers twice when guessing distance (#48316)

A finger may be closer than the required distance to more than one finger.
e.g. for fingers A, B, C, AB, AC and BC may trigger the check and count
C twice -resulting in a 4 finger click.

Avoid double-counting by marking those fingers already close enough to a
previous finger to avoid overcounting.

X.Org Bug 48316 <http://bugs.freedesktop.org/show_bug.cgi?id=48316>

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>
Reviewed-by: Chase Douglas <chase.douglas@canonical.com>